--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,8 @@
 # file: git/defaults/main.yml
 
-git_install_from_source: no
+git_install_from_source: yes
 git_prefix: "/usr/local"
-git_version: "1.9.0"
+git_version: "2.4.5"
 git_source_url: "https://nodeload.github.com/git/git/tar.gz/v{{git_version}}"
 
 git_install_server: no
